[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofdtd"
version = "0.1.0"
description = "Octree-based finite-difference time-domain tools in JAX."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["fdtd", "octree", "jax", "computational-electromagnetics"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed"
]

dependencies = [
  "jax",
  "pydantic>=2"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "build",
  "twine"
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-section-index"
]

[project.urls]
Homepage = "https://github.com/your-user/ofdtd"
Repository = "https://github.com/your-user/ofdtd"
Documentation = "https://your-user.github.io/ofdtd/"
Issues = "https://github.com/your-user/ofdtd/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ofdtd = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["ofdtd"]
